docs/NewStructure_admin/2. Установка и сопровождение/8. Безопасность платформы/015-admission-policy-engine/charts/constraint-templates/tests/required-labels/disallowed_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: allowed
  namespace: default
  labels:
    bar: xxx.example.com
spec:
  template:
    spec:
      containers:
        - name: foo
  selector:
    matchLabels:
      foo: bar
